--- a/High-Quality-Code-master/17. Design Patterns/CreationDesignPatternHomework/AbstractFactory/AbstractFactory.csproj
+++ b/High-Quality-Code-master/17. Design Patterns/CreationDesignPatternHomework/AbstractFactory/AbstractFactory.csproj
@@ -54,7 +54,7 @@
     <Compile Include="School\Teacher.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
+    <None Include="AbstractFactory.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
