--- a/Data-Structures-and-Algorithms-master/04. Dictionaries-Hash-Tables-and-Sets/homework/HashHomework/Task2/Task2.csproj
+++ b/Data-Structures-and-Algorithms-master/04. Dictionaries-Hash-Tables-and-Sets/homework/HashHomework/Task2/Task2.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EB61DA36-C713-4680-8AD3-0C02FFB45579}</ProjectGuid>
+    <ProjectGuid>{FBE4AFF6-DB8A-4185-AE87-98F4F88CFCA2}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_1.TreeBuild</RootNamespace>
-    <AssemblyName>1.TreeBuild</AssemblyName>
+    <RootNamespace>Task2</RootNamespace>
+    <AssemblyName>Task2</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,8 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Node.cs" />
-    <Compile Include="StartUp.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
