--- a/Data-Structures-and-Algorithms-master/03. Trees-and-Traversals/homework/Homework/2.WindowsDirectoryTraverse/2.WindowsDirectoryTraverse.csproj
+++ b/Data-Structures-and-Algorithms-master/03. Trees-and-Traversals/homework/Homework/2.WindowsDirectoryTraverse/2.WindowsDirectoryTraverse.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EB61DA36-C713-4680-8AD3-0C02FFB45579}</ProjectGuid>
+    <ProjectGuid>{DA0876E3-0BEF-4703-A8BE-B1EB94BA7CF7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_1.TreeBuild</RootNamespace>
-    <AssemblyName>1.TreeBuild</AssemblyName>
+    <RootNamespace>_2.WindowsDirectoryTraverse</RootNamespace>
+    <AssemblyName>2.WindowsDirectoryTraverse</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,7 +42,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Node.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
