--- a/Data-Structures-and-Algorithms-master/03. Trees-and-Traversals/homework/Homework/3.FileSystem/3.FileSystem.csproj
+++ b/Data-Structures-and-Algorithms-master/03. Trees-and-Traversals/homework/Homework/3.FileSystem/3.FileSystem.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EB61DA36-C713-4680-8AD3-0C02FFB45579}</ProjectGuid>
+    <ProjectGuid>{75A6FDBA-93E9-4618-82DA-E12AEB2AA752}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_1.TreeBuild</RootNamespace>
-    <AssemblyName>1.TreeBuild</AssemblyName>
+    <RootNamespace>_3.FileSystem</RootNamespace>
+    <AssemblyName>3.FileSystem</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,7 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Node.cs" />
+    <Compile Include="File.cs" />
+    <Compile Include="Folder.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
