--- a/Data-Structures-and-Algorithms-master/04. Dictionaries-Hash-Tables-and-Sets/homework/HashHomework/Task3/Task3.csproj
+++ b/Data-Structures-and-Algorithms-master/04. Dictionaries-Hash-Tables-and-Sets/homework/HashHomework/Task3/Task3.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EB61DA36-C713-4680-8AD3-0C02FFB45579}</ProjectGuid>
+    <ProjectGuid>{FCD4BC49-DD00-4673-99BD-1F54B1473A28}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_1.TreeBuild</RootNamespace>
-    <AssemblyName>1.TreeBuild</AssemblyName>
+    <RootNamespace>Task3</RootNamespace>
+    <AssemblyName>Task3</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,8 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Node.cs" />
-    <Compile Include="StartUp.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
