--- a/ASP.NET-Web-Forms/04. ASP.NET-Master-Pages/Homework/CompanyInfo/CompanyInfo.csproj
+++ b/ASP.NET-Web-Forms/04. ASP.NET-Master-Pages/Homework/CompanyInfo/CompanyInfo.csproj
@@ -94,12 +94,23 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="About.aspx" />
+    <Content Include="AboutCS.aspx" />
+    <Content Include="AboutRU.aspx" />
+    <Content Include="Contact.aspx" />
+    <Content Include="ContactCS.aspx" />
+    <Content Include="ContactRU.aspx" />
+    <Content Include="Index.aspx" />
+    <Content Include="IndexCS.aspx" />
+    <Content Include="IndexRU.aspx" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Header.Master" />
     <Content Include="RussianNav.master" />
+    <Content Include="ChineseNav.master" />
+    <Content Include="EnglishNav.master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -114,12 +125,89 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.aspx.cs">
+      <DependentUpon>About.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="About.aspx.designer.cs">
+      <DependentUpon>About.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AboutCS.aspx.cs">
+      <DependentUpon>AboutCS.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AboutCS.aspx.designer.cs">
+      <DependentUpon>AboutCS.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AboutRU.aspx.cs">
+      <DependentUpon>AboutRU.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AboutRU.aspx.designer.cs">
+      <DependentUpon>AboutRU.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ChineseNav.master.cs">
+      <DependentUpon>ChineseNav.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ChineseNav.master.designer.cs">
+      <DependentUpon>ChineseNav.master</DependentUpon>
+    </Compile>
+    <Compile Include="Contact.aspx.cs">
+      <DependentUpon>Contact.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Contact.aspx.designer.cs">
+      <DependentUpon>Contact.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ContactCS.aspx.cs">
+      <DependentUpon>ContactCS.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ContactCS.aspx.designer.cs">
+      <DependentUpon>ContactCS.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ContactRU.aspx.cs">
+      <DependentUpon>ContactRU.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ContactRU.aspx.designer.cs">
+      <DependentUpon>ContactRU.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="EnglishNav.master.cs">
+      <DependentUpon>EnglishNav.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="EnglishNav.master.designer.cs">
+      <DependentUpon>EnglishNav.master</DependentUpon>
+    </Compile>
     <Compile Include="Header.Master.cs">
       <DependentUpon>Header.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Header.Master.designer.cs">
       <DependentUpon>Header.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Index.aspx.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Index.aspx.designer.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="IndexCS.aspx.cs">
+      <DependentUpon>IndexCS.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IndexCS.aspx.designer.cs">
+      <DependentUpon>IndexCS.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="IndexRU.aspx.cs">
+      <DependentUpon>IndexRU.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IndexRU.aspx.designer.cs">
+      <DependentUpon>IndexRU.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RussianNav.master.cs">
